--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,16 @@
 * text=auto
 
-lib/*.h linguist-documentation
-lib/*.cc linguist-documentation
-lib/*.i linguist-documentation
+app_site/static/css/*.css linguist-documentation
+app_site/static/*.js linguist-documentation
 
-compilete_dev.py linguist-documentation
+data/style/*.css linguist-documentation
+server/register_and_data/static/*.css linguist-documentation
+
+app_installer/lib/*.h linguist-documentation
+app_installer/lib/*.cc linguist-documentation
+app_installer/lib/*.i linguist-documentation
+ 
+app_front_end/static/jquery.min.js linguist-documentation
+app_front_end/static/css/*.css linguist-documentation
+
+.sorse/core_sorse/shell_web_NM1/webview.h linguist-documentation
